Resolved the bug Bug 16266 - Generate eMPI button not visible when SSN and medical identifiers present
SVN-Revision: 104